# rusty-raytracer

./: CHANGELOG.md  Cargo.toml  README.md
examples/: ppm.rs
src/: camera.rs  color.rs  hittable.rs  main.rs  material.rs  objects.rs  point3.rs  primitives.rs  random.rs  ray.rs  sphere.rs  vec3.rs
src/material/: dielectric.rs  lambertian.rs  metal.rs
src/objects/: hittable.rs  sphere.rs
src/primitives/: color.rs  point3.rs  ray.rs
