[package]
name = "raytracing"
version = "0.1.0"
edition = "2018"

[profile.release]
opt-level = 3
lto = "thin"

# Build all dependencies (but not this workspace) with optimizations enabled.
[profile.dev.package."*"]
opt-level = 1

[dependencies]
indicatif = "0.16.2"
num-traits = "0.2.14"
rand = "0.8.4"
rayon = "1.5.1"
space-partitioning = "0.4.0"
